# stremio-community-v5

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  CROSS_COMPILE_SUMMARY.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  QUICK_START.bat  README.md  setup-repository.md  stremio.rc  vcpkg-mingw.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-release.yml  cross-compile-windows.yml  test-build.yml
docs/: CROSS_COMPILATION.md  RELEASE.md  WINDOWS.md
extensions/: extensions.json
scripts/: cross-compile.sh
src/: main.cpp  resource.h
src/core/: globals.cpp  globals.h
src/mpv/: player.cpp
src/node/: server.cpp
src/tray/: tray.cpp
src/ui/: mainwindow.cpp  mainwindow.h
src/updater/: updater.cpp
src/utils/: config.cpp  config.h  crashlog.cpp  extensions.cpp  extensions.h  helpers.cpp  helpers.h
src/webview/: webview.cpp  webview.h
utils/chocolatey/: stremio-desktop-v5.5.0.8.nupkg  stremio.nuspec
utils/chocolatey/tools/: chocolateyinstall.ps1
utils/mpv/anime4k/: Default Portable Config.rar
utils/mpv/anime4k/portable_config/: input.conf
utils/scoop/: stremio-desktop-v5.json
utils/stremio/: stremio-settings.ini
utils/windows/installer/: windows-installer.nsi
version/: version-details.json  version.json
